# axum-bootstrap

./: .env  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  cert.pem  mac.conf  privkey.pem  run.sh  rustfmt.toml  zip.sh
.github/workflows/: build.yml
.sqlx/: query-7f89afa3de6c820aeeb0948480785bb3760c3074d3b7ff605170f7302b4da0bc.json
examples/: basic.rs  h3_server.rs  h3_webtransport_server.rs  jwt.rs
src/: acceptor.rs  error.rs  handler.rs  json.rs  jwt.rs  lib.rs  main.rs  metrics.rs  server.rs  timeout_io.rs
src/init_log/: env_logger.rs  flexi_logger.rs  mod.rs  tracing.rs
src/layers/: alt_svc.rs  mod.rs
src/util/: env_logger.rs  extractor.rs  format.rs  http.rs  io.rs  json.rs  logx.rs  metrics.rs  mod.rs  tls.rs  tracing_init.rs
static/: index.html
